[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
serde_serialize = ["dep:serde"]

