[package]
name = "cartographer"
version = "0.1.0"
authors = ["Nickiel12"]
repository = "https://github.com/Nickiel12/cartographer"
edition = "2021"
description = "A small TUI crate for easily making simple, many optioned, menus"
license = "MIT"
keywords = ["terminal user interface", "menus", "console", "cartographer"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
serde_serialize = ["dep:serde"]

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"]}
enum-variants-strings = "0.2.1"

