[package]
name = "cartographer-rs"
version = "0.1.3"
authors = ["Nickiel12"]
repository = "https://github.com/Nickiel12/cartographer"
edition = "2021"
description = "A small TUI crate for easily making simple, searchable, menus"
license = "MIT"
keywords = ["tui", "menu", "console", "cartographer"]
categories = ["command-line-interface"]

[dependencies]
console = "0.15.5"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
serde_serialize = ["dep:serde"]

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"]}
enum-variants-strings = "0.2.1"

